[project]
name = "benchmark-visuals"
version = "0.1.0"
description = ""
authors = [
    {name = "Jiachen Wang",email = "jiachen.wang2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
